--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^16.7.0",
+    "react-country-region-selector": "^1.4.3",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
